# api/storage/api-docs/api-docs.json
@@ -1,11 +1,8 @@
 {
     "openapi": "3.0.0",
     "info": {
-        "title": "EPI Manager",
-        "contact": {
-            "email": "robson.stun@hotmail.com"
-        },
-        "version": "1.2"
+        "title": "Lumen-boilerplate",
+        "version": "1.0"
     },
     "servers": [
         {
@@ -89,15 +86,10 @@
                         "application/json": {
                             "schema": {
                                 "properties": {
-                                    "id_colaborador": {
+                                    "name": {
                                         "description": "Cria reserva",
                                         "type": "string",
-                                        "example": "1"
-                                    },
-                                    "id_equipamento": {
-                                        "description": "Cria reserva",
-                                        "type": "string",
-                                        "example": "1"
+                                        "example": "João da Silva"
                                     }
                                 },
                                 "type": "object"
